refactor(rankup)